# Smarthome-ESP32

./: CMakeLists.txt  CMakeListsUser.txt  platformio.ini
src/: constants.cpp  constants.hpp  helper.cpp  helper.hpp  main.cpp  util.cpp  util.hpp
src/connection/: Bluetooth.cpp  Network.cpp  Network.hpp
src/connection/bluetooth/: Bluetooth.cpp  Bluetooth.hpp
src/connection/bluetooth/callbacks/: SaveConfig.cpp  SaveConfig.hpp  TestConnection.cpp  TestConnection.hpp
src/structures/: Data.cpp  Data.hpp  GlobalConfig.cpp  GlobalConfig.hpp  PowerState.cpp  PowerState.hpp
